# trow-config-generator

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build.yaml
trow_config/: config_generator.py  configuration.py  kubernetes_client.py
